##Text encoding: utf-8

2007-07-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gcp-canvas-shape.c: (gnome_canvas_shape_ext_bounds):
	never use a non-existing path.
	* libs/gcp/view.cc: don't activate menus when there is no window;
	never change a pseudo-atom atomic number.
	* plugins/paint/bonds/bondtool.cc: don't modify a locked bond.
	* plugins/paint/bonds/chaintool.cc: fix keyboard state related
	issues.
	* plugins/paint/bonds/chaintool.h: ditto.
	* plugins/paint/residues/Makefile.am: add new files.
	* plugins/paint/residues/plugin.cc: add new gcpPseudoAtom class.
	* plugins/paint/residues/pseudo-atom.cc: ditto.
	* plugins/paint/residues/pseudo-atom.h: ditto.
	* plugins/paint/residues/residues-dlg.cc: create an initial residue
	(methyl) and enhance the GUI..
	* plugins/paint/residues/residues-dlg.h: ditto.
	* plugins/paint/residues/residues.glade: ditto.
	* plugins/paint/selection/erasertool.cc: do not delete a locked
	object.
	* plugins/paint/selection/selectiontool.cc:don't activate menus
	when there is no window.

2007-07-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/paint/C/figures/elt-menu.png: new screenshot.
	* docs/help/paint/C/gchempaint-unstable.xml: updated docs
	after fixing sr #105937.
	* libs/gcp/application.cc: destroy the window, not the doc
	when a file load fails. [#20468] 
	* libs/gcp/document.cc: set current doc to NULL when
	destroying. [#20468]
	* libs/gcp/view.cc: fixed caps lock state change.
	* libs/gcu/application.cc: don't call gtk_main_quit before
	gtk_main.
	* libs/gcu/application.h: ditto.
	* plugins/paint/bonds/chaintool.cc: fixed various issues.
	* plugins/paint/bonds/chaintool.h: ditto.
	* themes/paint/ACS_Document_1996: new theme (tanks to
	Takashi Suyama). [sr #105938]
	* themes/paint/Makefile.am: add new theme.

2007-07-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.cc: no more need to search for an atom, this
	is already done by the view.